--- a/index.html
+++ b/index.html
@@ -4,24 +4,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>netflix clone</title>
+    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
     <div class="main">
-        <nav >
-
-            <span><img src="/assets/images/logo.svg" width="50"></span>
-            <div>
-                <button>English</button>
-                <button>Sign In</button>
+        <nav>
+            <img src="assets/images/logo.svg" alt="Netflix Logo">
+            <div class="nav-buttons">
+                <button class="lang-btn">English</button>
+                <button class="signin-btn">Sign In</button>
             </div>
         </nav>
-        <div class="box"></div>
+
+        <div class="overlay"></div>
+
+        <div class="hero">
+            <h1>Unlimited movies, TV <br>shows and more</h1>
+            <h2>Starts at ₹149. Cancel at any time.</h2>
+            <p>Ready to watch? Enter your email to create or restart your membership.</p>
+
+            <div class="email-form">
+                <input type="email" placeholder="Email address">
+                <button class="getstarted-btn">Get Started &gt;</button>
+            </div>
+        </div>
     </div>
 
+
+
+    <br>
+    <div id="trend">
+        <h2>Trending Right Now</h2>
+        <div>
+            <img src="/assets/images/wednesday.webp" alt="wednesday_series">
+            <img src="/assets/images/raid.webp" alt="raid2_movie">
+            <img src="/assets/images/squid.webp" alt="squid_series">
+            <img src="/assets/images/kaps'.webp" alt="kaps_show">
+            <img src="/assets/images/chhaava.webp" alt="chhaava_movie">
+            <img src="/assets/images/aap.webp" alt="aap_movie">
+            <img src="/assets/images/jaat.webp" alt="aap_movie">
+        </div>
+    </div>
+
+
+    <h2 id="rea">More reasons to join</h2>
+    <div class="reasons">
+        <div>
+            <h3>Enjoy on your TV</h3>
+            <br>
+            <p> Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            </p>
+
+        </div>
+        <div>
+            <h3>Download your <br> shows to watch <br> offline</h3>
+            <br>
+            <p> Save your favourites easily and always have something to watch.</p>
+        </div>
+        <div>
+            <h3>Watch everywhere</h3>
+            <br>
+            <p> Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.
+            </p>
+        </div>
+        <div>
+            <h3>Create profiles for <br> kids</h3>
+            <br>
+            <p>Send kids on adventures with their favourite characters in a space made just for them — free with your
+                membership.</p>
+
+        </div>
+    </div>
+    <br>
+    <br>
+    <footer>
+        <div class="footer-container">
+            <p class="call">Questions? Call <a href="#">000-800-919-1743</a></p>
+
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Investor Relations</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Speed Test</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Help Centre</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">Cookie Preferences</a></li>
+                    <li><a href="#">Legal Notices</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Account</a></li>
+                    <li><a href="#">Ways to Watch</a></li>
+                    <li><a href="#">Corporate Information</a></li>
+                    <li><a href="#">Only on Netflix</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Media Centre</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <p class="region">Netflix India</p>
+            <br>
+            <p class="captcha">This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href="#">Learn
+                    more.</a> </p>
+        </div>
+    </footer>
 </body>
 
 </html>
